feat(device) detect brand Homtom model: HT50 feat(device) detect brand Huawei model: P8 Lite (2015) (ALE-CL00) feat(device) detect brand LG model: G3 (LGLS990), G2 (LG-F320L), X400 (LGM-K121S) feat(device) detect brand LT Mobile model: P9 (LT C3100) feat(device) detect brand Samsung model: Galaxy S5 Duos (SM-G900FD) feat(device) detect brand Tecno Mobile model: Camon C9 feat(device) add Vivo Y51L feat(device) add test Lenovo A2010-a feat(device) add test Supra M94BG feat(device) add test Samsung Galaxy A5 Duos (SM-A500FU) feat(device) add test Apple iPhone 7 (iPhone9,3)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6722,7 +6722,7 @@ Hoffmann:
 
 # Homtom
 Homtom:
-  regex: 'Homtom|(?:HT[0-9]{1,2})(?: ?Pro)?(?:[);/ ]|$)'
+  regex: 'Homtom|(?:HT[0-9]{1,2}(?: ?Pro)?|HT50)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Homtom[_ ])?HT ?([0-9]{1,2}(?: ?Pro)?)(?:[);/ ]|$)'
@@ -7208,7 +7208,7 @@ Huawei:
       model: 'P40 Pro Plus'
     - regex: 'GRA-(?:L09|UL00)(?:[);/ ]|$)'
       model: 'P8'
-    - regex: '(?:ALE-L(?:02|21|23)|ALE-UL00|ALE-TL00|503HW)(?:[);/ ]|$)'
+    - regex: '(?:ALE-L(?:02|21|23)|ALE-[TUC]L00|503HW)(?:[);/ ]|$)'
       model: 'P8 Lite (2015)'
     - regex: '(?:PRA-L(?:A1|X2|X1|X3)|hi6210sft)(?:[);/ ]|$)'
       model: 'P8 Lite (2017)'
@@ -9570,11 +9570,11 @@ LG:
       model: 'Zone 4'
     - regex: 'LM-X220PM'
       model: 'Tribute Empire'
-    - regex: 'VS980|L-01F'
+    - regex: 'VS980|L-01F|LG-F320L'
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[01258]|VS985'
+    - regex: 'LG-D85[01258]|VS985|LGLS990'
       model: 'G3'
     - regex: 'LG-D72[2458]'
       model: 'G3 Beat'
@@ -9690,6 +9690,8 @@ LG:
       model: 'W10'
     - regex: 'LM-X410'
       model: 'LM-X410'
+    - regex: 'LGM-K121S'
+      model: 'X400'
     - regex: 'LM-X420N'
       model: 'X4 (2019)'
     - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
@@ -13572,6 +13574,8 @@ Samsung:
       model: 'Galaxy S5 mini'
     - regex: '(?:SAMSUNG-)?SM-G9009D'
       model: 'Galaxy S5 Dual-SIM'
+    - regex: '(?:SAMSUNG-)?SM-G900FD'
+      model: 'Galaxy S5 Duos'
     - regex: '(?:SAMSUNG-)?SM-(?:G900|G906[KLS]|S902L|S903VL)|Galaxy-S5|SCL23'
       model: 'Galaxy S5'
     - regex: '(?:SAMSUNG-)?SM-G901F'
@@ -15501,6 +15505,8 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'Tecno[ _]CB7[j]?'
       model: 'Camon i4'
+    - regex: 'Tecno[- _]C9(?:[);/ ]|$)'
+      model: 'Camon C9'
     - regex: 'Tecno[ _]CF7(?:[);/ ]|$)'
       model: 'Camon 11'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
@@ -22530,11 +22536,13 @@ Kyowon:
 
 # LT Mobile or LT Electronics (lt-smartphone.com)
 LT Mobile:
-  regex: '(?:LT-NOTE 10S|LT NOTE 10M)'
+  regex: '(?:LT-NOTE 10S|LT NOTE 10M|LT C3100)'
   device: 'smartphone'
   models:
     - regex: 'LT[- ]NOTE (10[SM])'
       model: 'Note $1'
+    - regex: 'LT C3100'
+      model: 'P9'
 
 # ONYX BOOX (onyx-boox.ru)
 ONYX BOOX:
