--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5541,3 +5541,205 @@
     model: MI 9T
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.1; LGLS990 Build/LRX21Y; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 66.0.3359.126
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: LG
+    model: G3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 11_2_6 like Mac OS X) AppleWebKit/604.5.6 (KHTML, like Gecko) Mobile/15D100 [FBAN/FBIOS;FBAV/164.0.0.56.96;FBBV/98434650;FBDV/iPhone9,3;FBMD/iPhone;FBSN/iOS;FBSV/11.2.6;FBSS/2;FBCR/Bite;FBID/phone;FBLC/ru_RU;FBOP/5;FBRV/0]'
+  os:
+    name: iOS
+    version: 11.2.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 164.0.0.56.96
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 7
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 7.1.2; LT C3100 Build/N2G47H; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/65.0.3325.109 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/163.0.0.43.91;]'
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 163.0.0.43.91
+  device:
+    type: smartphone
+    brand: LT Mobile
+    model: P9
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.1; LG-F320L Build/LRX21Y; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 Mobile Safari/537.36 GSA/8.0.22.21.arm
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 8.0.22.21
+  device:
+    type: smartphone
+    brand: LG
+    model: G2
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; LGM-K121S Build/NRD90U; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 Mobile Safari/537.36 GSA/8.0.22.21.arm
+  os:
+    name: Android
+    version: "7.0"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 8.0.22.21
+  device:
+    type: smartphone
+    brand: LG
+    model: X400
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; vivo Y51L Build/LRX22G; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.106 Mobile Safari/537.36 GSA/7.25.17.21.arm64
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 7.25.17.21
+  device:
+    type: smartphone
+    brand: Vivo
+    model: Y51L
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; HUAWEI ALE-CL00 Build/HuaweiALE-CL00; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/53.0.2785.49 Mobile MQQBrowser/6.2 TBS/043024 Safari/537.36 MicroMessenger/6.5.4.1000 NetType/4G Language/zh_CN
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: mobile app
+    name: WeChat
+    version: 6.5.4.1000
+  device:
+    type: smartphone
+    brand: Huawei
+    model: P8 Lite (2015)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.0; HT50 Build/NRD90M)
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Homtom
+    model: HT50
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SAMSUNG SM-A500FU Build/MMB29M) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/4.0 Chrome/44.0.2403.133 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "4.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A5 Duos
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-G900FD Build/MMB29M)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy S5 Duos
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1; Lenovo A2010-a Build/LMY47D)
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Lenovo
+    model: A2010-a
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; TECNO-C9 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/55.0.2883.91 Mobile Safari/537.36 GSA/6.8.23.21.arm64
+  os:
+    name: Android
+    version: "6.0"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 6.8.23.21
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon C9
+  os_family: Android
+  browser_family: Unknown
