feat(device) detect brand Prestigio model: Muze H3 (PSP3552DUO)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14778,11 +14778,14 @@ Prestigio:
       model: 'S Max'
     - regex: '(PM[PT][0-9]+[a-z0-9_]+)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'PSP3552DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze H3'
+    - regex: 'Muze C3(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze C3'
     - regex: '((?:PAP|PSP)[0-9]+[a-z0-9_]+(?: DUO)?)(?:[);/ ]|$)'
       model: '$1'
-      device: 'smartphone'
-    - regex: 'Muze C3(?:[);/ ]|$)'
-      model: 'Muze C3'
       device: 'smartphone'
 
 # Sanyo
