feat(device) detect brand Prestigio model: Muze G3 LTE (PSP3511DUO)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14781,6 +14781,9 @@ Prestigio:
     - regex: 'PSP3552DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze H3'
+    - regex: 'PSP3511DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze G3 LTE'
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
