--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5761,3 +5761,21 @@
     model: Muze H3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; PSP3511DUO Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/54.0.2840.85 Mobile Safari/537.36 YandexSearch/7.21
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 54.0.2840.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Prestigio
+    model: Muze G3 LTE
+  os_family: Android
+  browser_family: Chrome
