--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15580,7 +15580,7 @@ Tecno Mobile:
 
 # TechPad (techpad.mx)
 TechPad:
-  regex: 'Tech ?pad|XTAB[ _-]|Dual C1081HD|S813G|NOTE[_ ]4CAM'
+  regex: 'Tech[ _]?pad|XTAB[ _-]|Dual C1081HD|S813G|NOTE[_ ]4CAM'
   device: 'tablet'
   models:
     - regex: 'S813G'
@@ -15602,6 +15602,9 @@ TechPad:
     - regex: 'NOTE 4CAM'
       device: 'smartphone'
       model: 'Note 4 Cam'
+    - regex: 'Tech_Pad_Kaios_One_3G'
+      device: 'feature phone'
+      model: 'Kaios One 3G'
     - regex: 'Tech ?pad[ _-]([^/;)]+)(?: Build|[;)])'
       model: '$1'
       device: 'smartphone'
