--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15559,6 +15559,8 @@ Tecno Mobile:
       model: 'Spark 6 Go'
     - regex: 'TECNO[ _]KF7j(?:[);/ ]|$)'
       model: 'Spark 7P'
+    - regex: 'TECNO[ _]KC1h(?:[);/ ]|$)'
+      model: 'Spark Go'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
