Adds detection for Tecno Mobile Spark 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15541,6 +15541,8 @@ Tecno Mobile:
       model: 'Pop 4 Air'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
+    - regex: 'Tecno[ _]KB7j(?:[);/ ]|$)'
+      model: 'Spark 3'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
