--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9553,3 +9553,21 @@
     brand: Tecno Mobile
     model: Spark Go
   os_family: Android
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; TECNO KB7j Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36 PHX/7.5
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Phoenix Browser
+    version: "7.5"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Spark 3
+  os_family: Android
+  browser_family: Chrome
