--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15533,6 +15533,8 @@ Tecno Mobile:
       model: 'Pop 2F'
     - regex: 'TECNO[ _]BA2(?:[);/ ]|$)'
       model: 'Pop 2 Plus'
+    - regex: 'TECNO[ _]B1p(?:[);/ ]|$)'
+      model: 'Pop 2 Power'
     - regex: 'TECNO[ _]RB8S(?:[);/ ]|$)'
       model: 'Pop 2X Plus'
     - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
