Improves detection for Tecno Mobile Camon 11

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15499,7 +15499,7 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'Tecno[ _]CB7[j]?'
       model: 'Camon i4'
-    - regex: 'Tecno[ _]CF7(?:[);/ ]|$)'
+    - regex: 'Tecno[ _]CF7k?(?:[);/ ]|$)'
       model: 'Camon 11'
     - regex: 'Tecno[ _]CF8(?:[);/ ]|$)'
       model: 'Camon 11 Pro'
