--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9589,3 +9589,21 @@
     model: Pop 2 Power
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; fr-fr; TECNO CF7k Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36 PHX/7.5
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Phoenix Browser
+    version: "7.5"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon 11
+  os_family: Android
+  browser_family: Chrome
