Adds detection for Tecno Mobile Camon i2X

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15481,6 +15481,8 @@ Tecno Mobile:
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
       model: 'F4 Pro'
+    - regex: 'TECNO[ _]ID5b(?:[);/ ]|$)'
+      model: 'Camon i2X'
     - regex: 'TECNO[ _]ID6(?:[);/ ]|$)'
       model: 'Camon iClick 2'
     - regex: 'TECNO[ _]IN2(?:[);/ ]|$)'
