--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9607,3 +9607,21 @@
     model: Camon 11
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; TECNO ID5b Build/O11019) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 UCBrowser/12.13.5.1209 (SpeedMode) U4/1.0 UCWEB/2.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 12.13.5.1209
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Camon i2X
+  os_family: Android
+  browser_family: Unknown
