Adds detection for Adsbot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4228,3 +4228,9 @@
     name: WellKnownBot
     category: Crawler
     url: https://well-known.dev
+-
+  user_agent: Mozilla/5.0 (compatible; Adsbot/3.1;  https://seostar.co/robot/)
+  bot:
+    name: Adsbot
+    category: Crawler
+    url: https://seostar.co/robot/
