--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2452,6 +2452,11 @@
   category: 'Crawler'
   url: 'https://well-known.dev'
 
+- regex: 'Adsbot/([\d+\.])'
+  name: 'Adsbot'
+  category: 'Crawler'
+  url: 'https://seostar.co/robot/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
