Adds detection for Tecno Mobile Camon 15 Air

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15511,6 +15511,8 @@ Tecno Mobile:
       model: 'Camon 12 Air'
     - regex: 'Tecno[ _-]CD7(?:[);/ ]|$)'
       model: 'Camon 15'
+    - regex: 'Tecno[ _-]CD6(?:[);/ ]|$)'
+      model: 'Camon 15 Air'
     - regex: 'Tecno[ _-]CD8(?:[);/ ]|$)'
       model: 'Camon 15 Pro'
     - regex: 'Tecno[ _-]CE9h(?:[);/ ]|$)'
