--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15533,7 +15533,7 @@ Tecno Mobile:
       model: 'Camon X'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
-    - regex: 'TECNO[ _]B1f(?:[);/ ]|$)'
+    - regex: 'TECNO[ _]B1[fg](?:[);/ ]|$)'
       model: 'Pop 2F'
     - regex: 'TECNO[ _]BA2(?:[);/ ]|$)'
       model: 'Pop 2 Plus'
