Adds detection for Tecno Mobile Camon 15 Premier

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15513,6 +15513,8 @@ Tecno Mobile:
       model: 'Camon 15'
     - regex: 'Tecno[ _-]CD6(?:[);/ ]|$)'
       model: 'Camon 15 Air'
+    - regex: 'Tecno[ _-]CD8j(?:[);/ ]|$)'
+      model: 'Camon 15 Premier'
     - regex: 'Tecno[ _-]CD8(?:[);/ ]|$)'
       model: 'Camon 15 Pro'
     - regex: 'Tecno[ _-]CE9h(?:[);/ ]|$)'
