--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15553,6 +15553,8 @@ Tecno Mobile:
       model: 'Pova'
     - regex: 'Tecno[ _]KB7j(?:[);/ ]|$)'
       model: 'Spark 3'
+    - regex: 'Tecno[ _]KC8(?:[);/ ]|$)'
+      model: 'Spark 3 Pro'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
