--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9715,4 +9715,21 @@
     model: Spark 3 Pro
   os_family: Android
   browser_family: Chrome
- 
+ - 
+  user_agent: Mozilla/5.0 (Linux; Android 10; TECNO LC7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 87.0.4280.141
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Pouvoir 4
+  os_family: Android
+  browser_family: Chrome
