Adds detection for Tecno Mobile Pouvoir 4 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15584,6 +15584,8 @@ Tecno Mobile:
       model: 'Pouvoir 3 Plus'
     - regex: 'TECNO[ _]LC7(?:[);/ ]|$)'
       model: 'Pouvoir 4'
+    - regex: 'TECNO[ _]LC8(?:[);/ ]|$)'
+      model: 'Pouvoir 4 Pro'
     - regex: 'Tecno[ _-]J8(?:[);/ ]|$)'
       model: 'Boom J8'
     - regex: 'Tecno[ _-]W3 Pro(?:[);/ ]|$)'
