Adds detection for Tecno Mobile Pouvoir 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15582,6 +15582,8 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'TECNO[ _]LA7(?:[);/ ]|$)'
       model: 'Pouvoir 2'
+    - regex: 'TECNO[ _]LB7(?:[);/ ]|$)'
+      model: 'Pouvoir 3'
     - regex: 'TECNO[ _]LC6a?(?:[);/ ]|$)'
       model: 'Pouvoir 3 Air'
     - regex: 'Tecno[ _]LB8a?'
