Adds detection for Tecno Mobile DroidPad 7F

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15493,6 +15493,9 @@ Tecno Mobile:
     - regex: 'DP7C Pro-SGA1(?:[);/ ]|$)'
       model: 'DroidPad 7C Pro'
       device: 'tablet'
+    - regex: 'Tecno[ _]P703(?:[);/ ]|$)'
+      model: 'DroidPad 7F'
+      device: 'tablet'
     - regex: 'TECNO[ _]DP10A Pro(?:[);/ ]|$)'
       model: 'DroidPad 10A Pro'
       device: 'tablet'
