--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9015,3 +9015,21 @@
     model: iPad Air 2
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; TECNO P703) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.110 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 70.0.3538.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Tecno Mobile
+    model: DroidPad 7F
+  os_family: Android
+  browser_family: Chrome
