feat(device) detect brand Prestigio model: Muze G3 LTE (PSP3511DUO) feat(device) add test Explay ActiveD 8.2 3G feat(device) add test Asus ZenFone 3 (ASUS_Z017DB) feat(device) add test Tecno Mobile W5 Lite feat(device) add test Samsung Galaxy J1 Mini (SM-J105H) feat(device) add test Huawei Nova 3i (INE-LX1, INE-LX2) feat(device) add test Huawei Y6 (2018) (ATU-L11) feat(device) add test Huawei P30 Pro (VOG-L29) feat(device) detect brand Blackview model: BV5500 Plus feat(device) detect brand OPPO model: Reno 4 Z 5G (CPH2065)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2916,8 +2916,8 @@ Blackview:
       model: 'A60'
     - regex: 'A80Pro(?:[);/ ]|$)'
       model: 'A80 Pro'
-    - regex: 'A([86]0)Plus(?:[);/ ]|$)'
-      model: 'A$1 Plus'
+    - regex: '(A[86]0|BV5500)Plus(?:[);/ ]|$)'
+      model: '$1 Plus'
     - regex: '(BV6000S)'
       model: '$1'
     - regex: '(BV9700|BL6000)Pro'
@@ -12305,6 +12305,8 @@ OPPO:
       model: 'Reno 4 SE 5G '
     - regex: 'PDN[TM]00(?:[);/ ]|$)'
       model: 'Reno 4 Pro 5G'
+    - regex: 'CPH2065(?:[);/ ]|$)'
+      model: 'Reno 4 Z 5G'
     - regex: 'PEG[MT]00(?:[);/ ]|$)'
       model: 'Reno 5 5G'
     - regex: 'PEG[MT]10(?:[);/ ]|$)'
