--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5797,3 +5797,153 @@
     model: S327
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.0.0; ASUS_Z017DB Build/OPR1.170623.026) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36 mCent/0.13.1127
+  os:
+    name: Android
+    version: 8.0.0
+    platform: ""
+  client:
+    type: browser
+    name: mCent
+    version: 0.13.1127
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Asus
+    model: ZenFone 3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 6.0; TECNO W5 Lite Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/55.0.2883.91 Mobile Safari/537.36[FBAN/EMA;FBLC/fr_FR;FBAV/20.0.0.9.4;]'
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 20.0.0.9.4
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: W5 Lite
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; SM-J105H Build/LMY47V; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 Mobile Safari/537.36 GSA/8.1.12.21.arm
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 8.1.12.21
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy J1 Mini
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 8.1.0; INE-LX1 Build/HUAWEIINE-LX1)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Nova 3i
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; INE-LX2 Build/HUAWEIINE-LX2; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/85.0.4183.101 Mobile Safari/537.36 GSA/11.28.7.21.arm64
+  os:
+    name: Android
+    version: "9"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.28.7.21
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Nova 3i
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 8.0.0; ATU-L11 Build/HUAWEIATU-L11; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Mobile Safari/537.36[FBAN/EMA;FBLC/it_IT;FBAV/235.0.0.5.119;]'
+  os:
+    name: Android
+    version: 8.0.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 235.0.0.5.119
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Y6 (2018)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; BV5500Plus Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/300.2.0.58.129;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 300.2.0.58.129
+  device:
+    type: smartphone
+    brand: Blackview
+    model: BV5500 Plus
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; VOG-L29 Build/HUAWEIVOG-L29; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Mobile Safari/537.36 Line/11.0.2/IAB
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Line
+    version: 11.0.2
+  device:
+    type: smartphone
+    brand: Huawei
+    model: P30 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; CPH2065 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OPPO
+    model: Reno 4 Z 5G
+  os_family: Android
+  browser_family: Chrome
