--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7252,3 +7252,21 @@
     model: M94BG
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; ActiveD 8.2 3G Build/JZO54K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.57 Safari/537.36 OPR/18.0.1290.67495
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 18.0.1290.67495
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Explay
+    model: ActiveD 8.2 3G
+  os_family: Android
+  browser_family: Opera
