--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -6053,3 +6053,37 @@
     model: X21i
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 7.0; ASUS_Z017D Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/55.0.2883.91 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/151.0.0.40.205;]'
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 151.0.0.40.205
+  device:
+    type: smartphone
+    brand: Asus
+    model: ZenFone 3
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; STARNAUTE4 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/62.0.3202.84 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 62.0.3202.84
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarNaute 4
+  os_family: Android
+  browser_family: Chrome
