feat(device) detect brand LG models: K4 (2017) (LG-M160), Leon 4G LTE (LGMS345), G Pad IV 8.0" (LG-V533)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9700,6 +9700,8 @@ LG:
       model: 'X4 (2019)'
     - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
       model: 'K4'
+    - regex: 'LG-M160(?:[);/ ]|$)'
+      model: 'K4 (2017)'
     - regex: 'LM-X420'
       model: 'K40'
     - regex: 'LM-X430(?:[);/ ]|$)'
@@ -9832,7 +9834,7 @@ LG:
       model: 'Optimus 4X HD'
     - regex: '(?:LG-)?(H340n?|H324)'
       model: 'Leon'
-    - regex: '(?:LG-)?H342'
+    - regex: '(?:LG-)?H342|LGMS345'
       model: 'Leon 4G LTE'
     - regex: '(?:LG-)?H422'
       model: 'Spirit'
@@ -9856,6 +9858,9 @@ LG:
 
     - regex: 'LGUK410'
       model: 'G Pad 7.0" LTE'
+      device: 'tablet'
+    - regex: 'LG-V533'
+      model: 'G Pad IV 8.0"'
       device: 'tablet'
     - regex: 'LGLK430'
       model: 'G Pad F 7.0"'
