--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9553,6 +9553,7 @@
     brand: Tecno Mobile
     model: Spark Go
   os_family: Android
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 9; TECNO KB7j Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36 PHX/7.5
   os:
@@ -9698,24 +9699,6 @@
   os_family: Android
   browser_family: Chrome
 - 
-  user_agent: Mozilla/5.0 (Linux; Android 10; TECNO KC8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
-  os:
-    name: Android
-    version: "10"
-    platform: ""
-  client:
-    type: browser
-    name: Chrome Mobile
-    version: 80.0.3987.99
-    engine: Blink
-    engine_version: ""
-  device:
-    type: smartphone
-    brand: Tecno Mobile
-    model: Spark 3 Pro
-  os_family: Android
-  browser_family: Chrome
- - 
   user_agent: Mozilla/5.0 (Linux; Android 10; TECNO LC7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36
   os:
     name: Android
