feat(device) detect brand Archos model: 55 Cobalt Plus feat(device) detect brand Lava model: RI feat(test) add tests for devices: Samsung Galaxy Note 8 (SM-N950U)

--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7288,3 +7288,35 @@
     model: G Pad IV 8.0"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_5_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPad7,11;FBMD/iPad;FBSN/iOS;FBSV/13.5.1;FBSS/2;FBID/tablet;FBLC/en_US;FBOP/5]'
+  os:
+    name: iOS
+    version: 13.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 7 10.2
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 13_5_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 148.0.0.26.120 (iPad7,3; iOS 13_5_1; en_US; en-US; scale=2.00; 750x1334; 226453516)
+  os:
+    name: iOS
+    version: 13.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 148.0.0.26.120
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Pro 10.5
+  os_family: iOS
+  browser_family: Unknown
