--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6224,3 +6224,19 @@
     model: Mode 1 RS
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; SM-N950U Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Mobile Safari/537.36 Instagram 148.0.0.33.121 Android (28/9; 420dpi; 1080x2181; samsung; SM-N950U; greatqlte; qcom; en_US; 227299063)
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 148.0.0.33.121
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 8
+  os_family: Android
+  browser_family: Unknown
