--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19339,7 +19339,7 @@ Divisat:
     - regex: '(J-Link)(?:[);/ ]|$)'
       model: '$1'
 
-# DIXON (https://www.cashcrusaders.co.za/)
+# DIXON (https://www.dixoninfo.com/)
 DIXON:
   regex: 'DIXON_'
   device: 'smartphone'
