feat(device) detect new brand Blow model: Laser Tab 10 feat(device) detect brand vivo models: Y30 (1938), V17 Neo (1907_19, 1907), Y11 (1906), V9 Pro (1851), V17 (1920) feat(device) detect brand QMobile model: V7 Tab feat(device) detect brand Teclast model: P80h feat(device) detect brand LG model: V20 (LG-H918) feat(device) detect brand Azumi Mobile model: IRO A5 Q feat(device) detect brand Blu model: Studio C 5+5 LTE feat(device) detect brand Lava model: Z66

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2792,7 +2792,7 @@ Blu:
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
       model: 'Advance $1'
-    - regex: '(?:BLU[_ ])?Studio[ _](5.0 C|5.5|View XL|Mega|C 8\+8|[CG][ _]HD|C|G|Touch|M HD|M5 Plus|J[1258]|X8 HD|X5|XL|X)(?:[);/ ]|$)'
+    - regex: '(?:BLU[_ ])?Studio[ _](5.0 C|5.5|C 5\+5 LTE|View XL|Mega|C 8\+8|[CG][ _]HD|C|G|Touch|M HD|M5 Plus|J[1258]|X8 HD|X5|XL|X)(?:[);/ ]|$)'
       model: 'Studio $1'
     - regex: '(?:BLU[_ ])?Studio[ _]5.0 ?K(?:[);/ ]|$)'
       model: 'Studio 5.0 K'
@@ -3154,6 +3154,10 @@ Vivo:
       model: 'V15 Pro'
     - regex: 'vivo 1909(?:[);/ ]|$)'
       model: 'V17 Pro'
+    - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
+      model: 'V17 Neo'
+    - regex: 'vivo 1920(?:[);/ ]|$)'
+      model: 'V17'
     - regex: 'V2022(?:[);/ ]|$)'
       model: 'V20 SE'
     - regex: '(?:VIV-|BBG-)?vivo[ _]1601(?:[);/ ]|$)'
@@ -3172,6 +3176,8 @@ Vivo:
       model: 'V9'
     - regex: 'vivo 1727(?:[);/ ]|$)'
       model: 'V9 Youth'
+    - regex: 'vivo 1851(?:[);/ ]|$)'
+      model: 'V9 Pro'
     - regex: 'vivo X5Pro(?:[);/ ]|$)'
       model: 'X5 Pro'
     - regex: 'vivo 1721(?:[);/ ]|$)'
@@ -3212,6 +3218,8 @@ Vivo:
       model: 'X9 Plus'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
+    - regex: 'vivo 1906(?:[);/ ]|$)'
+      model: 'Y11'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
@@ -3232,7 +3240,7 @@ Vivo:
       model: 'Y3'
     - regex: 'V1930A(?:[);/ ]|$)'
       model: 'Y3 Standard'
-    - regex: 'V203[46]A(?:[);/ ]|$)'
+    - regex: '(?:vivo 1938|V203[46]A)(?:[);/ ]|$)'
       model: 'Y30'
     - regex: 'V2099A(?:[);/ ]|$)'
       model: 'Y30 (2021)'
@@ -15461,23 +15469,17 @@ T-Mobile:
 
 # Teclast (teclast.com)
 Teclast:
-  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X|P20HD|P10[_ ]HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
+  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80[XH]|P20HD|P10[_ ]HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
       model: 'Tbook $1'
     - regex: 'T10\(E3C6\)'
       model: 'T10'
-    - regex: 'T30_(ROW|EEA)'
-      model: 'T30 $1'
-    - regex: 'P80X_(ROW|EEA)'
-      model: 'P80X $1'
     - regex: 'P10S\(N4H5\)'
       model: 'P10S'
     - regex: 'P20HD_(?:ROW|EEA)'
       model: 'P20HD'
-    - regex: 'M40_(?:ROW|EEA)'
-      model: 'M40'
     - regex: 'P10[_ ]HD_(?:ROW|EEA)'
       model: 'P10HD'
     - regex: 'M20_4G'
@@ -15486,6 +15488,8 @@ Teclast:
       model: 'M30 4G'
     - regex: 'TLA016'
       model: 'M16'
+    - regex: '(P80[Xh]|T30|M40)[_ ](?:ROW|EEA)'
+      model: '$1'
     - regex: '98\(M1E[45789]\)|98\(M3E3\)'
       model: 'TPad 98 10.1" 4G'
     - regex: 'X80 Power\(B2N4\)(?:[);/ ]|$)'
@@ -22973,3 +22977,9 @@ Smotreshka:
   regex: 'Smotreshka Box (115NA|413NA|213a?)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
+
+# Blow
+Blow:
+  regex: 'LaserTAB10(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'Laser Tab 10'
