feat(device) detect brand Digma model: Plane 8580 4G (PS8199ML) feat(device) detect brand Vertex models: Impress Max, Impress Open feat(device) detect brand Motorola models: Moto G3, Moto X Play (XT1563) feat(device) detect brand Intex models: Aqua Lions T1 Lite, Aqua A4 Plus,  Aqua A4, Aqua Lions 2, Aqua Lions 3, Aqua Lions E3, Aqua Lions N1, Aqua Lions T1,  Aqua Crystal Plus, Aqua Fulvu E5, Aqua Jewel 2, Aqua S1, Aqua S3
feat(test) remove duplicate tests P80X_EEA, P80X_ROW in file smartphone-18.yml

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8202,6 +8202,20 @@ Intex:
   models:
     - regex: 'IM0318ND'
       model: 'Aqua Lions 3'
+    - regex: 'AQUA[ _]LIONS[ _]T1[ _]LITE(?:[);/ ]|$)'
+      model: 'Aqua Lions T1 Lite'
+    - regex: 'AQUA[ _]LIONS[ _]([NT]1|[23]|E3)(?:[);/ ]|$)'
+      model: 'Aqua Lions $1'
+    - regex: 'AQUA (A4) PLUS(?:[);/ ]|$)'
+      model: 'Aqua $1 Plus'
+    - regex: 'AQUA[ _](A4|S[13])(?:[);/ ]|$)'
+      model: 'Aqua $1'
+    - regex: 'AQUA CRYSTAL\+(?:[);/ ]|$)'
+      model: 'Aqua Crystal Plus'
+    - regex: 'AQUA FulVU e5(?:[);/ ]|$)'
+      model: 'Aqua Fulvu E5'
+    - regex: 'AQUA JEWEL 2(?:[);/ ]|$)'
+      model: 'Aqua Jewel 2'
     - regex: 'Intex[ _]([^/;]*)[ _]Build'
       model: '$1'
     - regex: '(Cloud (?:Fame|Glory) 4G)'
@@ -11040,7 +11054,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT1562'
+    - regex: '(?:MOT-|Motorola-)?XT156[23]'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -18792,7 +18806,7 @@ Vertex:
   models:
     - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G|Luck)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'ImpressMAX(?:[);/ ]|$)'
+    - regex: 'Impress ?MAX(?:[);/ ]|$)'
       model: 'Impress Max'
     - regex: 'Pro_P(3[01]0)_4G(?:[);/ ]|$)'
       model: 'Pro P$1 4G'
