feat(device) detect brand HTC models: U19e (2Q7A100), One M8 Eye feat(device) detect brand ASUS models: ZenFone 3 Zoom (Z01HDA), ZenFone 3 (Z012DC) feat(device) detect brand AVH model: Excer G5.6 feat(device) detect brand LG models: Stylo 3 (LG-LS777), Rebel 3 (LGL158VL) feat(device) detect brand Polaroid model: Phantom 5 (PRO5023PVE03) feat(device) detect brand Vodafone models: Smart N10 (VFD 630), VFD 730 (Smart V10) feat(test) add tests Xiaomi: Redmi Note 3, Redmi Note 4, Redmi Note 7, Redmi 7, Redmi 4 feat(test) add tests Samsung: Galaxy A10 (SM-A105G), Galaxy S5, (SM-G900V), Galaxy J6+ (SM-J610FN), Galaxy J1 (2016) (SM-J120FN), Galaxy S9+ (SM-G965U) feat(test) add tests Neffos: X1 Max feat(test) add tests Huawei: P10 Lite (WAS-LX3)

--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7608,3 +7608,21 @@
     model: SHIELD Tablet
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Excer G5.6 Build/N9F27C) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3325.109 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 65.0.3325.109
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: AVH
+    model: Excer G5.6
+  os_family: Android
+  browser_family: Chrome
