--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -159,6 +159,8 @@ HTC:
       model: 'Desire 526G Plus'
     - regex: 'EXODUS 1(?:[);/ ]|$)'
       model: 'Exodus 1'
+    - regex: 'HTC 2Q7A100(?:[);/ ]|$)'
+      model: 'U19e'
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
@@ -2640,7 +2642,7 @@ Asus:
       model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?(X008)'
       model: 'ZenFone 3 Pegasus'
-    - regex: '(?:ASUS_)?(ZE553KL|Z01HD)'
+    - regex: '(?:ASUS_)?(ZE553KL|Z01HDA?)'
       model: 'ZenFone 3 Zoom'
     - regex: '(?:ASUS_)?ZS550KL'
       model: 'ZenFone 3 Deluxe'
@@ -2648,7 +2650,7 @@ Asus:
       model: 'ZenFone Selfie'
     - regex: '(?:ASUS_)?(Z016[DS]|Z01FD)'
       model: 'ZenFone 3 Deluxe'
-    - regex: '(?:ASUS_)?(Z017DA|ZE520KL|ZE552KL|Z017D|Z012(D|S))'
+    - regex: '(?:ASUS_)?Z(?:017DA|E520KL|E552KL|017D|012(?:DC?|S))'
       model: 'ZenFone 3'
     - regex: '(?:ASUS_)?Z01B[DS]|ZC551KL'
       model: 'ZenFone 3 Laser'
@@ -2720,8 +2722,8 @@ AVH:
   regex: 'Excer[ _]'
   device: 'tablet'
   models:
-    - regex: 'Excer[ _]G5.3'
-      model: 'Excer G5.3'
+    - regex: 'Excer[ _]G5.([36])'
+      model: 'Excer G5.$1'
     - regex: 'Excer[ _]G5'
       model: 'Excer G5'
     - regex: 'Excer[ _]10[ _]PRO'
@@ -9707,6 +9709,8 @@ LG:
       model: 'Stylo 2 V'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
+    - regex: 'LG-LS777(?:[);/ ]|$)'
+      model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
@@ -9889,6 +9893,8 @@ LG:
       model: 'Spirit'
     - regex: '(?:LG)?C660'
       model: 'Optimus Pro'
+    - regex: 'LGL158VL'
+      model: 'Rebel 3'
     - regex: 'LML21(?:1B|2V)L'
       model: 'Rebel 4'
     - regex: 'VS876'
@@ -14685,6 +14691,8 @@ Polaroid:
       model: 'L5s'
     - regex: 'PRO4611(?:PR201)?'
       model: 'Pro4611'
+    - regex: 'PRO5023'
+      model: 'Phantom 5'
     - regex: 'PROV400'
       model: 'Agate'
     - regex: 'PROV350'
@@ -16571,7 +16579,7 @@ Videocon:
 
 # Vodafone
 Vodafone:
-  regex: '(?<!FBCR/)Vodafone[ _-]|Smart ?Tab ?(?:III? ?)?(?:|4G|7|10)[);/ -]|VodafoneSmartChat|VFD[ _][0-9]+(?:[);/ ]|$)|VFD320|VF6[89]5|VF-(696|1397|795|895N|1497)'
+  regex: '(?<!FBCR/)Vodafone[ _-]|Smart ?Tab ?(?:III? ?)?(?:|4G|7|10)[);/ -]|VodafoneSmartChat|(?:VFD[ _][0-9]+|VFD320|VF6[89]5|VF-(696|1397|795|895N|1497))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'VFD 100'
@@ -16596,12 +16604,16 @@ Vodafone:
       model: 'Smart X9'
     - regex: 'VFD 610'
       model: 'Smart N8'
+    - regex: 'VFD 630'
+      model: 'Smart N10'
     - regex: 'Smart ultra 6'
       model: 'Smart Ultra 6'
     - regex: 'VFD 700'
       model: 'Smart Ultra 7'
     - regex: 'VFD 720'
       model: 'Smart N9'
+    - regex: 'VFD 730'
+      model: 'Smart V10'
     - regex: 'VFD 900'
       model: 'Smart Platinum 7'
     - regex: 'Vodafone[ _]875(?:[);/ ]|$)'
