feat(device) detect brand HTC model: Desire 310 (D310n)

--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -7546,7 +7546,7 @@
   device:
     type: smartphone
     brand: HTC
-    model: Desire 526G Plus
+    model: Desire 526
   os_family: Android
   browser_family: Chrome
 - user_agent: Mozilla/5.0 (Linux; Android 4.4.2; HTCD620h Build/KOT49H) AppleWebKit/537.36 (KHTML like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
