--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -147,6 +147,8 @@ HTC:
       model: 'Desire 626S'
     - regex: '0PCV1(?:[);/ ]|$)'
       model: 'Desire 510'
+    - regex: 'HTC[_ ]D310n(?:[);/ ]|$)'
+      model: 'Desire 310'
     - regex: '608t(?:[);/ ]|$)'
       model: 'Desire 608t'
     - regex: 'HTC_0P9O2(?:[);/ ]|$)'
@@ -157,8 +159,8 @@ HTC:
       model: 'Desire 620'
     - regex: 'HTC(?:0P9C2|D816x)(?:[);/ ]|$)'
       model: 'Desire 816'
-    - regex: 'HTCD526h(?:[);/ ]|$)'
-      model: 'Desire 526G Plus'
+    - regex: 'HTC_?D526h(?:[);/ ]|$)'
+      model: 'Desire 526'
     - regex: 'EXODUS 1(?:[);/ ]|$)'
       model: 'Exodus 1'
 
