--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6327,3 +6327,21 @@
     model: Redmi Note 7
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; M5 Note) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.14 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 72.0.3626.14
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Meizu
+    model: M5 Note
+  os_family: Android
+  browser_family: Chrome
