fix: remove not uses rule `JVC Shell` from televisions.yml

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -254,7 +254,7 @@ Inverto:
 
 # JVC
 JVC:
-  regex: 'AFTSO001|JVC[;,]|JVC Shell'
+  regex: 'AFTSO001|JVC[;,]'
   device: 'tv'
   models:
     - regex: 'AFTSO001'
