Adds detection for various bots (#6777)
* Adds detection for WellKnownBot

* Adds detection for Adsbot

Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4222,3 +4222,15 @@
     producer:
         name: Global Digital Network Plus, LLC
         url: https://gdnplus.com/
+-
+  user_agent: WellKnownBot/0.1 (https://well-known.dev)
+  bot:
+    name: WellKnownBot
+    category: Crawler
+    url: https://well-known.dev
+-
+  user_agent: Mozilla/5.0 (compatible; Adsbot/3.1;  https://seostar.co/robot/)
+  bot:
+    name: Adsbot
+    category: Crawler
+    url: https://seostar.co/robot/
